2004-05-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/EventCmp.py: Convert to db. 
	* src/plugins/eventcmp.glade: HIGify dialogs. 

2004-05-07  Don Allingham  <donaldallingham@users.sourceforge.net>
	* src/DbPrompter.py: handle open dialog in a clean manner
	* src/gramps.py: handle open dialog in a clean manner
	* src/gramps_main.py: handle open dialog in a clean manner
	* src/gramps.glade: handle open dialog in a clean manner

2004-05-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/soundgen.py: Convert to db. 
	* src/plugins/GraphViz.py: Typo.
	* src/plugins/Verify.py: Convert to db.

2004-05-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/WebPage.py: Clean up conversion to db. 
	Switch to using Sort function. 
	* src/plugins/CountAncestors.py: Add file, convert to db.
	* src/plugins/count_anc.py: Remove file. 
	* src/plugins/Summary.py: Convert to db.
	* src/Makefile.am: Ship Sort.py instead of sort.py.
	* src/plugins/Makefile.am: Ship CountAncestors.py 
	instead of count_anc.py.
	
	* src/gramps.glade: Resolve widget naming conflict. 
	* src/SelectPerson.py: Resolve widget naming conflict. 
	
	* src/Sort.py (by_date): Add function.
	* src/plugins/BookReport.py: Convert to db. 

2004-05-05  Don Allingham  <donaldallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: commit after media object change
	* src/gramps.glade: file chooser for image selector
	* src/ImageSelect.py: handle new file chooser 

2004-05-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/RelGraph.py: Convert to db. Change coding style.
	Use FreeSans as a TrueType font. 

2004-05-04  Don Allingham  <donaldallingham@users.sourceforge.net>
	* src/gramps_main.py: rebuild tree after importing
	* src/plugins/ReadGedcom.py: destroy filechooser at proper time

2004-05-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetDescendantReport.py (get_xpm_image): Remove 
	function, import it from Utils.py instead.